--- a/add-product.html
+++ b/add-product.html
@@ -15,7 +15,7 @@
             </div>   
             <div class="box2">
                 <input type="button" value="SAVE" id="save-product-btn">
-                <a href="/sandbox/testwebsite/"><input type="button" value="CANCEL"></a>
+                <a href="/"><input type="button" value="CANCEL"></a>
             </div>
         </div>
         <hr>
