Update ID of field

--- a/add-product.html
+++ b/add-product.html
@@ -50,7 +50,7 @@
             <div class="item_extra" id="Book" hidden>
                 <p>Please provide book weight in KG</p><br>
                 <label for="Weight">Weight (KG)</label>
-                <input type="value" id="Weight">
+                <input type="value" id="weight">
             </div>
 
             <div class="item_extra" id="Furniture" hidden>
