Update IDS of fields

--- a/add-product.html
+++ b/add-product.html
@@ -44,7 +44,7 @@
             <div class="item_extra" id="DVD" hidden>
                 <p>Please provide DVD size in MB</p><br>
                 <label for="Size">Size (MB)</label>
-                <input type="value" id="Size">
+                <input type="value" id="size">
             </div>
 
             <div class="item_extra" id="Book" hidden>
@@ -56,11 +56,11 @@
             <div class="item_extra" id="Furniture" hidden>
                 <p>Please provide dimensions in HxWxL format</p><br>
                 <label for="Height">Height (CM)</label>
-                <input type="value" id="Height"><br>
+                <input type="value" id="height"><br>
                 <label for="Width">Width (CM)</label>
-                <input type="value" id="Width"><br>
+                <input type="value" id="width"><br>
                 <label for="Length">Length (CM)</label>
-                <input type="value" id="Length">
+                <input type="value" id="length">
             </div>
 
         </form>
