Update field names for elements

--- a/add-product.html
+++ b/add-product.html
@@ -14,8 +14,8 @@
                 <h2>Product Add</h2>    
             </div>   
             <div class="box2">
-                <input type="button" value="SAVE" id="save-product-btn">
-                <a href="/"><input type="button" value="CANCEL"></a>
+                <input type="button" value="Save" id="save-product-btn">
+                <a href="/"><input type="button" value="Cancel"></a>
             </div>
         </div>
         <hr>
