Update field names

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <h2>Product List</h2>
             </div> 
             <div class="navigation">
-                <a href="add-product.html"><button>Add</button></a>
-                <button id="delete-product-btn">Mass Delete</button>
+                <a href="add-product.html"><button>ADD</button></a>
+                <button id="delete-product-btn">MASS DELETE</button>
             </div>
         </div>
     <hr>
