Add error message box instead of alert(); add comments

--- a/add-product.html
+++ b/add-product.html
@@ -21,6 +21,8 @@
         <hr>
     </header>
     <main>
+        <div class="message-box">
+        </div>
         <form id="product_form">
             <label for="SKU">SKU</label>
             <input type="text" id='sku'>
